# Peano

./: ChangeLog.md  Peano.cabal  PeanoZ.cabal  README.md  package.yaml  stack.yaml
src/: Bonus.hs  PeanoQ.hs  PeanoZ.hs
test/: Spec.hs  Stampa.hs  Test.hs  TestQ.hs  TestZ.hs
