cabal-version: 1.12

name:           Peano
version:        0.1.0.0
description:    Progetto con varie estensioni degli assiomi di Peano.
homepage:       https://github.com/laughinginloud/Peano#readme
bug-reports:    https://github.com/laughinginloud/Peano/issues
author:         Mattia Martelli
maintainer:     mattia.martelli@live.it
copyright:      2020 Mattia Martelli
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/laughinginloud/Peano

library
  exposed-modules:
      PeanoZ
    , PeanoQ
    , Bonus
  other-modules:
      Paths_Peano
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , flow
    , primes
  default-language: Haskell2010

test-suite Peano-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Paths_Peano
    , Stampa
    , TestZ
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Peano
    , base >=4.7 && <5
    , ansi-terminal
  default-language: Haskell2010
